y.output
Useless nonterminals

   function_call


Terminals which are not used

   NAME
   NUMBER
   STRING_TYPE
   INCREMENT_OP
   DECREMENT_OP
   DOT_OP
   COMMENT


Useless rules

  224 function_call: IDENTIFIER OPEN_PARENTHESIS parameter_list CLOSE_PARENTHESIS


State 332 conflicts: 1 shift/reduce
State 367 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: program_header program_body

    2 program_header: import program_header
    3               | /* empty */

    4 import: IMPORT STRING

    5 program_body: variable_section subprogram_section

    6 @1: /* empty */

    7 variable_section: VARIABLES_SECTION COLON @1 variable_declarations
    8                 | /* empty */

    9 @2: /* empty */

   10 variable_declarations: variable_declaration SEMICOLON @2 variable_declarations_tail

   11 variable_declaration: simple_variable_declaration
   12                     | compost_variable_declaration

   13 variable_declarations_tail: variable_declarations
   14                           | /* empty */

   15 @3: /* empty */

   16 subprogram_section: SUBPROGRAMS_SECTION COLON @3 subprogram_declarations
   17                   | /* empty */

   18 subprogram_declarations: subprogram_declaration subprogram_declarations_tail

   19 subprogram_declarations_tail: subprogram_declarations
   20                             | /* empty */

   21 @4: /* empty */

   22 simple_variable_declaration: type IDENTIFIER @4 simple_variable_declaration_value

   23 @5: /* empty */

   24 @6: /* empty */

   25 @7: /* empty */

   26 simple_variable_declaration: CONST @5 type IDENTIFIER @6 ASSIGN_OP @7 expression

   27 @8: /* empty */

   28 @9: /* empty */

   29 simple_variable_declaration: REF @8 type IDENTIFIER @9 simple_variable_declaration_value

   30 @10: /* empty */

   31 simple_variable_declaration_value: ASSIGN_OP @10 expression
   32                                  | /* empty */

   33 type: INT
   34     | DOUBLE REAL
   35     | REAL
   36     | COMPLEX
   37     | BOOLEAN
   38     | STRING

   39 @11: /* empty */

   40 @12: /* empty */

   41 @13: /* empty */

   42 @14: /* empty */

   43 compost_variable_declaration: MATRIX_OF @11 type OPEN_BRACKETS @12 dimensions CLOSE_BRACKETS @13 IDENTIFIER @14 matrix_assignment

   44 @15: /* empty */

   45 @16: /* empty */

   46 compost_variable_declaration: SET_OF @15 type IDENTIFIER @16 set_assignment

   47 @17: /* empty */

   48 @18: /* empty */

   49 @19: /* empty */

   50 @20: /* empty */

   51 compost_variable_declaration: ENUM @17 IDENTIFIER @18 COLON @19 IDENTIFIER @20 identifier_list END_ENUM

   52 @21: /* empty */

   53 @22: /* empty */

   54 @23: /* empty */

   55 compost_variable_declaration: STRUCT @21 IDENTIFIER @22 COLON @23 variable_declarations END_STRUCT

   56 matrix_assignment: matrix_assignment_aux
   57                  | /* empty */

   58 @24: /* empty */

   59 matrix_assignment_aux: ASSIGN_OP @24 OPEN_BRACES matrix_assignment_aux_aux

   60 matrix_assignment_aux_aux: set_assignment_aux_aux CLOSE_BRACES

   61 @25: /* empty */

   62 @26: /* empty */

   63 matrix_assignment_aux_aux: OPEN_BRACES @25 set_assignment_aux_aux CLOSE_BRACES @26 matrix_assignment_aux_aux_aux

   64 @27: /* empty */

   65 @28: /* empty */

   66 matrix_assignment_aux_aux_aux: COMMA OPEN_BRACES @27 set_assignment_aux_aux CLOSE_BRACES @28 matrix_assignment_aux_aux_aux
   67                              | /* empty */

   68 set_assignment: set_assignment_aux
   69               | /* empty */

   70 @29: /* empty */

   71 @30: /* empty */

   72 set_assignment_aux: ASSIGN_OP @29 OPEN_BRACES @30 set_assignment_aux_aux CLOSE_BRACES

   73 set_assignment_aux_aux: expression values_list

   74 @31: /* empty */

   75 values_list: COMMA @31 set_assignment_aux_aux
   76            | /* empty */

   77 @32: /* empty */

   78 @33: /* empty */

   79 identifier_list: COMMA @32 IDENTIFIER @33 identifier_list
   80                | /* empty */

   81 dimensions: range dimensions_tail
   82           | /* empty */

   83 @34: /* empty */

   84 range: INT_NUMBER @34 range_tail

   85 @35: /* empty */

   86 range_tail: RANGE @35 INT_NUMBER
   87           | /* empty */

   88 @36: /* empty */

   89 dimensions_tail: COMMA @36 range dimensions_tail
   90                | /* empty */

   91 subprogram_declaration: procedure_declaration
   92                       | function_declaration

   93 @37: /* empty */

   94 @38: /* empty */

   95 procedure_declaration: PROCEDURE IDENTIFIER OPEN_PARENTHESIS @37 parameter_list CLOSE_PARENTHESIS COLON @38 statement_list END_PROCEDURE SEMICOLON

   96 @39: /* empty */

   97 @40: /* empty */

   98 @41: /* empty */

   99 @42: /* empty */

  100 function_declaration: FUNCTION @39 type IDENTIFIER @40 OPEN_PARENTHESIS @41 parameter_list CLOSE_PARENTHESIS COLON @42 statement_list END_FUNCTION SEMICOLON

  101 parameter_list: variable_declaration parameter_list_tail
  102               | /* empty */

  103 @43: /* empty */

  104 parameter_list_tail: COMMA @43 variable_declaration parameter_list_tail
  105                    | /* empty */

  106 statement_list: statement statement_list
  107               | /* empty */

  108 statement: assignment_statement
  109          | if_statement
  110          | switch_statement
  111          | while_statement
  112          | for_statement
  113          | subprogram_call
  114          | return_statement
  115          | variable_declaration SEMICOLON

  116 @44: /* empty */

  117 return_statement: RETURN @44 expression SEMICOLON

  118 assignment_statement: destination assignment_statement_tail SEMICOLON

  119 @45: /* empty */

  120 assignment_statement_tail: ASSIGN_OP @45 expression

  121 @46: /* empty */

  122 assignment_statement_tail: ADD_ASSIGN_OP @46 expression

  123 @47: /* empty */

  124 assignment_statement_tail: SUB_ASSIGN_OP @47 expression

  125 @48: /* empty */

  126 assignment_statement_tail: MULT_ASSIGN_OP @48 expression

  127 @49: /* empty */

  128 assignment_statement_tail: DIV_ASSIGN_OP @49 expression

  129 @50: /* empty */

  130 assignment_statement_tail: MOD_ASSIGN_OP @50 expression

  131 @51: /* empty */

  132 destination: IDENTIFIER @51 identifier_tail

  133 @52: /* empty */

  134 identifier_tail: OPEN_BRACKETS @52 dimensions CLOSE_BRACKETS
  135                | /* empty */

  136 @53: /* empty */

  137 @54: /* empty */

  138 if_statement: IF OPEN_PARENTHESIS @53 expression CLOSE_PARENTHESIS COLON @54 statement_list else_clausule END_IF SEMICOLON

  139 @55: /* empty */

  140 else_clausule: ELSE COLON @55 statement_list
  141              | /* empty */

  142 @56: /* empty */

  143 @57: /* empty */

  144 @58: /* empty */

  145 switch_statement: SWITCH OPEN_PARENTHESIS @56 IDENTIFIER @57 CLOSE_PARENTHESIS COLON @58 case_clasule other_clasule END_SWITCH SEMICOLON

  146 @59: /* empty */

  147 @60: /* empty */

  148 @61: /* empty */

  149 case_clasule: CASE OPEN_PARENTHESIS @59 expression CLOSE_PARENTHESIS COLON @60 statement_list BREAK SEMICOLON @61 case_clasule
  150             | /* empty */

  151 @62: /* empty */

  152 other_clasule: OTHER COLON @62 statement_list
  153              | /* empty */

  154 @63: /* empty */

  155 @64: /* empty */

  156 while_statement: WHILE OPEN_PARENTHESIS @63 expression CLOSE_PARENTHESIS COLON @64 statement_list END_WHILE SEMICOLON

  157 @65: /* empty */

  158 @66: /* empty */

  159 @67: /* empty */

  160 @68: /* empty */

  161 @69: /* empty */

  162 for_statement: FOR @65 IDENTIFIER @66 IN @67 IDENTIFIER @68 COLON @69 statement_list END_FOR SEMICOLON

  163 @70: /* empty */

  164 @71: /* empty */

  165 subprogram_call: IDENTIFIER @70 OPEN_PARENTHESIS @71 argument_list CLOSE_PARENTHESIS

  166 argument_list: argument_list_aux
  167              | /* empty */

  168 argument_list_aux: expression argument_list_tail

  169 @72: /* empty */

  170 argument_list_tail: COMMA @72 argument_list_aux
  171                   | /* empty */

  172 expression: term_or term_or_tail

  173 @73: /* empty */

  174 term_or_tail: OR_OP @73 term_or term_or_tail
  175             | /* empty */

  176 term_or: term_and term_and_tail

  177 @74: /* empty */

  178 term_and_tail: AND_OP @74 term_and term_and_tail
  179              | /* empty */

  180 term_and: term_bool_comparison term_bool_comparison_tail

  181 @75: /* empty */

  182 term_bool_comparison_tail: EQ_OP @75 term_bool_comparison term_bool_comparison_tail

  183 @76: /* empty */

  184 term_bool_comparison_tail: NEQ_OP @76 term_bool_comparison term_bool_comparison_tail
  185                          | /* empty */

  186 term_bool_comparison: term_arit_comparison term_arit_comparison_tail

  187 @77: /* empty */

  188 term_arit_comparison_tail: LEQ_OP @77 term_arit_comparison term_arit_comparison_tail

  189 @78: /* empty */

  190 term_arit_comparison_tail: BEQ_OP @78 term_arit_comparison term_arit_comparison_tail

  191 @79: /* empty */

  192 term_arit_comparison_tail: LT_OP @79 term_arit_comparison term_arit_comparison_tail

  193 @80: /* empty */

  194 term_arit_comparison_tail: BT_OP @80 term_arit_comparison term_arit_comparison_tail
  195                          | /* empty */

  196 term_arit_comparison: term term_tail

  197 @81: /* empty */

  198 term_tail: ADD_OP @81 term term_tail

  199 @82: /* empty */

  200 term_tail: SUB_OP @82 term term_tail
  201          | /* empty */

  202 term: factor factor_tail

  203 @83: /* empty */

  204 factor_tail: MULT_OP @83 factor factor_tail

  205 @84: /* empty */

  206 factor_tail: DIV_OP @84 factor factor_tail

  207 @85: /* empty */

  208 factor_tail: MOD_OP @85 factor factor_tail
  209            | /* empty */

  210 factor: expo expo_tail

  211 @86: /* empty */

  212 expo_tail: EXPO_OP @86 expo expo_tail
  213          | /* empty */

  214 expo: negation_unsub negation_unsub_tail

  215 @87: /* empty */

  216 negation_unsub_tail: NEG_OP @87 negation_unsub
  217                    | /* empty */

  218 negation_unsub: INT_NUMBER
  219               | REAL_NUMBER
  220               | IMAGINARY_PART
  221               | STRING
  222               | IDENTIFIER
  223               | subprogram_call


Terminals, with rules where they appear

$end (0) 0
error (256)
NAME (258)
IDENTIFIER (259) 22 26 29 43 46 51 55 79 95 100 132 145 162 165 222
STRING (260) 4 38 221
NUMBER (261)
IMAGINARY_PART (262) 220
INT_NUMBER (263) 84 86 218
REAL_NUMBER (264) 219
IMPORT (265) 4
VARIABLES_SECTION (266) 7
SUBPROGRAMS_SECTION (267) 16
PROCEDURE (268) 95
FUNCTION (269) 100
END_PROCEDURE (270) 95
END_FUNCTION (271) 100
RETURN (272) 117
INT (273) 33
REAL (274) 34 35
COMPLEX (275) 36
STRING_TYPE (276)
DOUBLE (277) 34
BOOLEAN (278) 37
ENUM (279) 51
STRUCT (280) 55
SET_OF (281) 46
MATRIX_OF (282) 43
END_STRUCT (283) 55
END_ENUM (284) 51
CONST (285) 26
REF (286) 29
IF (287) 138
ELSE (288) 140
FOR (289) 162
IN (290) 162
WHILE (291) 156
SWITCH (292) 145
CASE (293) 149
BREAK (294) 149
OTHER (295) 152
END_IF (296) 138
END_FOR (297) 162
END_WHILE (298) 156
END_SWITCH (299) 145
SEMICOLON (300) 10 95 100 115 117 118 138 145 149 156 162
COMMA (301) 66 75 79 89 104 170
COLON (302) 7 16 51 55 95 100 138 140 145 149 152 156 162
OPEN_PARENTHESIS (303) 95 100 138 145 149 156 165
CLOSE_PARENTHESIS (304) 95 100 138 145 149 156 165
OPEN_BRACKETS (305) 43 134
CLOSE_BRACKETS (306) 43 134
OPEN_BRACES (307) 59 63 66 72
CLOSE_BRACES (308) 60 63 66 72
RANGE (309) 86
ASSIGN_OP (310) 26 31 59 72 120
ADD_ASSIGN_OP (311) 122
SUB_ASSIGN_OP (312) 124
MULT_ASSIGN_OP (313) 126
DIV_ASSIGN_OP (314) 128
MOD_ASSIGN_OP (315) 130
INCREMENT_OP (316)
DECREMENT_OP (317)
NEG_OP (318) 216
AND_OP (319) 178
OR_OP (320) 174
LEQ_OP (321) 188
BEQ_OP (322) 190
EQ_OP (323) 182
NEQ_OP (324) 184
SUB_OP (325) 200
ADD_OP (326) 198
MULT_OP (327) 204
DIV_OP (328) 206
MOD_OP (329) 208
LT_OP (330) 192
BT_OP (331) 194
EXPO_OP (332) 212
DOT_OP (333)
COMMENT (334)


Nonterminals, with rules where they appear

$accept (80)
    on left: 0
program (81)
    on left: 1, on right: 0
program_header (82)
    on left: 2 3, on right: 1 2
import (83)
    on left: 4, on right: 2
program_body (84)
    on left: 5, on right: 1
variable_section (85)
    on left: 7 8, on right: 5
@1 (86)
    on left: 6, on right: 7
variable_declarations (87)
    on left: 10, on right: 7 13 55
@2 (88)
    on left: 9, on right: 10
variable_declaration (89)
    on left: 11 12, on right: 10 101 104 115
variable_declarations_tail (90)
    on left: 13 14, on right: 10
subprogram_section (91)
    on left: 16 17, on right: 5
@3 (92)
    on left: 15, on right: 16
subprogram_declarations (93)
    on left: 18, on right: 16 19
subprogram_declarations_tail (94)
    on left: 19 20, on right: 18
simple_variable_declaration (95)
    on left: 22 26 29, on right: 11
@4 (96)
    on left: 21, on right: 22
@5 (97)
    on left: 23, on right: 26
@6 (98)
    on left: 24, on right: 26
@7 (99)
    on left: 25, on right: 26
@8 (100)
    on left: 27, on right: 29
@9 (101)
    on left: 28, on right: 29
simple_variable_declaration_value (102)
    on left: 31 32, on right: 22 29
@10 (103)
    on left: 30, on right: 31
type (104)
    on left: 33 34 35 36 37 38, on right: 22 26 29 43 46 100
compost_variable_declaration (105)
    on left: 43 46 51 55, on right: 12
@11 (106)
    on left: 39, on right: 43
@12 (107)
    on left: 40, on right: 43
@13 (108)
    on left: 41, on right: 43
@14 (109)
    on left: 42, on right: 43
@15 (110)
    on left: 44, on right: 46
@16 (111)
    on left: 45, on right: 46
@17 (112)
    on left: 47, on right: 51
@18 (113)
    on left: 48, on right: 51
@19 (114)
    on left: 49, on right: 51
@20 (115)
    on left: 50, on right: 51
@21 (116)
    on left: 52, on right: 55
@22 (117)
    on left: 53, on right: 55
@23 (118)
    on left: 54, on right: 55
matrix_assignment (119)
    on left: 56 57, on right: 43
matrix_assignment_aux (120)
    on left: 59, on right: 56
@24 (121)
    on left: 58, on right: 59
matrix_assignment_aux_aux (122)
    on left: 60 63, on right: 59
@25 (123)
    on left: 61, on right: 63
@26 (124)
    on left: 62, on right: 63
matrix_assignment_aux_aux_aux (125)
    on left: 66 67, on right: 63 66
@27 (126)
    on left: 64, on right: 66
@28 (127)
    on left: 65, on right: 66
set_assignment (128)
    on left: 68 69, on right: 46
set_assignment_aux (129)
    on left: 72, on right: 68
@29 (130)
    on left: 70, on right: 72
@30 (131)
    on left: 71, on right: 72
set_assignment_aux_aux (132)
    on left: 73, on right: 60 63 66 72 75
values_list (133)
    on left: 75 76, on right: 73
@31 (134)
    on left: 74, on right: 75
identifier_list (135)
    on left: 79 80, on right: 51 79
@32 (136)
    on left: 77, on right: 79
@33 (137)
    on left: 78, on right: 79
dimensions (138)
    on left: 81 82, on right: 43 134
range (139)
    on left: 84, on right: 81 89
@34 (140)
    on left: 83, on right: 84
range_tail (141)
    on left: 86 87, on right: 84
@35 (142)
    on left: 85, on right: 86
dimensions_tail (143)
    on left: 89 90, on right: 81 89
@36 (144)
    on left: 88, on right: 89
subprogram_declaration (145)
    on left: 91 92, on right: 18
procedure_declaration (146)
    on left: 95, on right: 91
@37 (147)
    on left: 93, on right: 95
@38 (148)
    on left: 94, on right: 95
function_declaration (149)
    on left: 100, on right: 92
@39 (150)
    on left: 96, on right: 100
@40 (151)
    on left: 97, on right: 100
@41 (152)
    on left: 98, on right: 100
@42 (153)
    on left: 99, on right: 100
parameter_list (154)
    on left: 101 102, on right: 95 100
parameter_list_tail (155)
    on left: 104 105, on right: 101 104
@43 (156)
    on left: 103, on right: 104
statement_list (157)
    on left: 106 107, on right: 95 100 106 138 140 149 152 156 162
statement (158)
    on left: 108 109 110 111 112 113 114 115, on right: 106
return_statement (159)
    on left: 117, on right: 114
@44 (160)
    on left: 116, on right: 117
assignment_statement (161)
    on left: 118, on right: 108
assignment_statement_tail (162)
    on left: 120 122 124 126 128 130, on right: 118
@45 (163)
    on left: 119, on right: 120
@46 (164)
    on left: 121, on right: 122
@47 (165)
    on left: 123, on right: 124
@48 (166)
    on left: 125, on right: 126
@49 (167)
    on left: 127, on right: 128
@50 (168)
    on left: 129, on right: 130
destination (169)
    on left: 132, on right: 118
@51 (170)
    on left: 131, on right: 132
identifier_tail (171)
    on left: 134 135, on right: 132
@52 (172)
    on left: 133, on right: 134
if_statement (173)
    on left: 138, on right: 109
@53 (174)
    on left: 136, on right: 138
@54 (175)
    on left: 137, on right: 138
else_clausule (176)
    on left: 140 141, on right: 138
@55 (177)
    on left: 139, on right: 140
switch_statement (178)
    on left: 145, on right: 110
@56 (179)
    on left: 142, on right: 145
@57 (180)
    on left: 143, on right: 145
@58 (181)
    on left: 144, on right: 145
case_clasule (182)
    on left: 149 150, on right: 145 149
@59 (183)
    on left: 146, on right: 149
@60 (184)
    on left: 147, on right: 149
@61 (185)
    on left: 148, on right: 149
other_clasule (186)
    on left: 152 153, on right: 145
@62 (187)
    on left: 151, on right: 152
while_statement (188)
    on left: 156, on right: 111
@63 (189)
    on left: 154, on right: 156
@64 (190)
    on left: 155, on right: 156
for_statement (191)
    on left: 162, on right: 112
@65 (192)
    on left: 157, on right: 162
@66 (193)
    on left: 158, on right: 162
@67 (194)
    on left: 159, on right: 162
@68 (195)
    on left: 160, on right: 162
@69 (196)
    on left: 161, on right: 162
subprogram_call (197)
    on left: 165, on right: 113 223
@70 (198)
    on left: 163, on right: 165
@71 (199)
    on left: 164, on right: 165
argument_list (200)
    on left: 166 167, on right: 165
argument_list_aux (201)
    on left: 168, on right: 166 170
argument_list_tail (202)
    on left: 170 171, on right: 168
@72 (203)
    on left: 169, on right: 170
expression (204)
    on left: 172, on right: 26 31 73 117 120 122 124 126 128 130 138
    149 156 168
term_or_tail (205)
    on left: 174 175, on right: 172 174
@73 (206)
    on left: 173, on right: 174
term_or (207)
    on left: 176, on right: 172 174
term_and_tail (208)
    on left: 178 179, on right: 176 178
@74 (209)
    on left: 177, on right: 178
term_and (210)
    on left: 180, on right: 176 178
term_bool_comparison_tail (211)
    on left: 182 184 185, on right: 180 182 184
@75 (212)
    on left: 181, on right: 182
@76 (213)
    on left: 183, on right: 184
term_bool_comparison (214)
    on left: 186, on right: 180 182 184
term_arit_comparison_tail (215)
    on left: 188 190 192 194 195, on right: 186 188 190 192 194
@77 (216)
    on left: 187, on right: 188
@78 (217)
    on left: 189, on right: 190
@79 (218)
    on left: 191, on right: 192
@80 (219)
    on left: 193, on right: 194
term_arit_comparison (220)
    on left: 196, on right: 186 188 190 192 194
term_tail (221)
    on left: 198 200 201, on right: 196 198 200
@81 (222)
    on left: 197, on right: 198
@82 (223)
    on left: 199, on right: 200
term (224)
    on left: 202, on right: 196 198 200
factor_tail (225)
    on left: 204 206 208 209, on right: 202 204 206 208
@83 (226)
    on left: 203, on right: 204
@84 (227)
    on left: 205, on right: 206
@85 (228)
    on left: 207, on right: 208
factor (229)
    on left: 210, on right: 202 204 206 208
expo_tail (230)
    on left: 212 213, on right: 210 212
@86 (231)
    on left: 211, on right: 212
expo (232)
    on left: 214, on right: 210 212
negation_unsub_tail (233)
    on left: 216 217, on right: 214
@87 (234)
    on left: 215, on right: 216
negation_unsub (235)
    on left: 218 219 220 221 222 223, on right: 214 216


state 0

    0 $accept: . program $end

    IMPORT  shift, and go to state 1

    $default  reduce using rule 3 (program_header)

    program         go to state 2
    program_header  go to state 3
    import          go to state 4


state 1

    4 import: IMPORT . STRING

    STRING  shift, and go to state 5


state 2

    0 $accept: program . $end

    $end  shift, and go to state 6


state 3

    1 program: program_header . program_body

    VARIABLES_SECTION  shift, and go to state 7

    $default  reduce using rule 8 (variable_section)

    program_body      go to state 8
    variable_section  go to state 9


state 4

    2 program_header: import . program_header

    IMPORT  shift, and go to state 1

    $default  reduce using rule 3 (program_header)

    program_header  go to state 10
    import          go to state 4


state 5

    4 import: IMPORT STRING .

    $default  reduce using rule 4 (import)


state 6

    0 $accept: program $end .

    $default  accept


state 7

    7 variable_section: VARIABLES_SECTION . COLON @1 variable_declarations

    COLON  shift, and go to state 11


state 8

    1 program: program_header program_body .

    $default  reduce using rule 1 (program)


state 9

    5 program_body: variable_section . subprogram_section

    SUBPROGRAMS_SECTION  shift, and go to state 12

    $default  reduce using rule 17 (subprogram_section)

    subprogram_section  go to state 13


state 10

    2 program_header: import program_header .

    $default  reduce using rule 2 (program_header)


state 11

    7 variable_section: VARIABLES_SECTION COLON . @1 variable_declarations

    $default  reduce using rule 6 (@1)

    @1  go to state 14


state 12

   16 subprogram_section: SUBPROGRAMS_SECTION . COLON @3 subprogram_declarations

    COLON  shift, and go to state 15


state 13

    5 program_body: variable_section subprogram_section .

    $default  reduce using rule 5 (program_body)


state 14

    7 variable_section: VARIABLES_SECTION COLON @1 . variable_declarations

    STRING     shift, and go to state 16
    INT        shift, and go to state 17
    REAL       shift, and go to state 18
    COMPLEX    shift, and go to state 19
    DOUBLE     shift, and go to state 20
    BOOLEAN    shift, and go to state 21
    ENUM       shift, and go to state 22
    STRUCT     shift, and go to state 23
    SET_OF     shift, and go to state 24
    MATRIX_OF  shift, and go to state 25
    CONST      shift, and go to state 26
    REF        shift, and go to state 27

    variable_declarations         go to state 28
    variable_declaration          go to state 29
    simple_variable_declaration   go to state 30
    type                          go to state 31
    compost_variable_declaration  go to state 32


state 15

   16 subprogram_section: SUBPROGRAMS_SECTION COLON . @3 subprogram_declarations

    $default  reduce using rule 15 (@3)

    @3  go to state 33


state 16

   38 type: STRING .

    $default  reduce using rule 38 (type)


state 17

   33 type: INT .

    $default  reduce using rule 33 (type)


state 18

   35 type: REAL .

    $default  reduce using rule 35 (type)

